# project_run

./: .pre-commit-config.yaml  manage.py  pyproject.toml  requirements.txt
app_athletes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app_athletes/migrations/: 0001_initial.py  0002_alter_athleteinfo_goals.py
app_challenges/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app_challenges/migrations/: 0001_initial.py
app_positions/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
app_positions/migrations/: 0001_initial.py  0002_position_date_time.py  0003_position_distance_position_speed.py
app_rating/: admin.py  apps.py  models.py  urls.py  views.py
app_rating/migrations/: 0001_initial.py
app_run/: admin.py  models.py  serializers.py  urls.py  views.py
app_run/migrations/: 0001_initial.py  0002_run_status.py  0003_athleteinfo.py  0004_rename_user_athleteinfo_user_id.py  0005_challenge.py  0006_position.py  0007_run_distance.py  0008_remove_challenge_athlete_remove_position_run_and_more.py  0009_alter_run_comment.py  0010_run_run_time_seconds.py  0011_run_speed.py
app_subscribe/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app_subscribe/migrations/: 0001_initial.py  0002_alter_subscribe_athlete_alter_subscribe_coach.py  0003_subscribe_unique_subscribe.py
collectible_items/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
collectible_items/migrations/: 0001_initial.py  0002_alter_collectibleitem_latitude_and_more.py  0003_collectibleitem_athlete.py  0004_alter_collectibleitem_athlete.py
project_run/: asgi.py  urls.py  wsgi.py
project_run/settings/: base.py  local.py  production.py
users/: serializers.py  urls.py  views.py
