[project]
name = "project-run"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.37.37",
    "django==5.2",
    "django-debug-toolbar>=5.2.0",
    "django-filter==25.1",
    "django-storages==1.14.6",
    "djangorestframework==3.16.0",
    "mypy>=1.17.0",
    "psycopg2-binary==2.9.10",
]
